objects/Subscription_obj__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Frquency__c</fullName>
        <label>Billing Frquency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Billing_date__c</fullName>
        <label>Next Billing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Plan__c</fullName>
        <label>Sub Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Subscription obj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription objs</pluralLabel>
    <recordTypes>
        <fullName>New_users</fullName>
        <active>true</active>
        <label>New users</label>
    </recordTypes>
    <recordTypes>
        <fullName>Old_users</fullName>
        <active>true</active>
        <label>Old users</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sub_valid_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Next_Billing_date__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Next_Billing_date__c</errorDisplayField>
        <errorMessage>The date cannot be in past</errorMessage>
    </validationRules>
</CustomObject>